@@ -99,7 +99,7 @@ public class DynaPropertyUtilsTestCase extends TestCase {
         // Initialize the DynaBean's property values (like TestBean)
         bean.set("booleanProperty", new Boolean(true));
         bean.set("booleanSecond", new Boolean(true));
-        bean.set("doubleProperty", new Double(321.0));
+        bean.set("doubleProperty", Double.valueOf(321.0));
         bean.set("floatProperty", new Float((float) 123.0));
         final int[] intArray = { 0, 10, 20, 30, 40 };
         bean.set("intArray", intArray);
@@ -173,7 +173,7 @@ public class DynaPropertyUtilsTestCase extends TestCase {
 
         final Map<String, Object> map = new HashMap<>();
         map.put("booleanProperty", Boolean.FALSE);
-        map.put("doubleProperty", new Double(333.0));
+        map.put("doubleProperty", Double.valueOf(333.0));
         map.put("dupProperty", new String[] { "New 0", "New 1", "New 2" });
         map.put("floatProperty", new Float((float) 222.0));
         map.put("intArray", new int[] { 0, 100, 200 });
@@ -246,7 +246,7 @@ public class DynaPropertyUtilsTestCase extends TestCase {
         assertEquals("Value of 'booleanProperty'",
                      Boolean.TRUE, map.get("booleanProperty"));
         assertEquals("Value of 'doubleProperty'",
-                     new Double(321.0), map.get("doubleProperty"));
+                     Double.valueOf(321.0), map.get("doubleProperty"));
         assertEquals("Value of 'floatProperty'",
                      new Float((float) 123.0), map.get("floatProperty"));
         assertEquals("Value of 'intProperty'",
@@ -2027,7 +2027,7 @@ public class DynaPropertyUtilsTestCase extends TestCase {
             final double newValue = oldValue + 1.0;
             PropertyUtils.setNestedProperty(bean,
                     "nested.doubleProperty",
-                    new Double(newValue));
+                    Double.valueOf(newValue));
             assertEquals("Matched new value",
                     newValue,
                     nested.getDoubleProperty(),
@@ -2310,7 +2310,7 @@ public class DynaPropertyUtilsTestCase extends TestCase {
             final double newValue = oldValue + 1.0;
             PropertyUtils.setSimpleProperty(bean,
                     "doubleProperty",
-                    new Double(newValue));
+                    Double.valueOf(newValue));
             assertEquals("Matched new value",
                     newValue,
                     ((Double) bean.get("doubleProperty")).doubleValue(),
