@@ -130,7 +130,7 @@ public class ByteConverterTestCase extends NumberConverterTestBase<Byte> {
             new Integer(9),
             new Long(10),
             new Float(11.1),
-            new Double(12.2)
+            Double.valueOf(12.2)
         };
 
         final Byte[] expected = {
